[tool.poetry]
name = "Appdaemon-Test-Framework"
version = "4.0.0"
description = ""
authors = ["Flo Kempenich <flo@kempenich.dev>"]
packages = [{include = "appdaemontestframework"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.11"
appdaemon = { git = "https://github.com/LuisMunozVillarreal/appdaemon.git", rev = "3cd24f5ca232b4572e7d06f3af0d653906480948" }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
flake8-isort = "^6.1.2"
ipython = "^9.3.0"
ipdb = "^0.13.13"
mypy = "^1.16.1"
pydocstyle = "^6.3.0"
pylint = "^3.3.7"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-xdist = "^3.7.0"
tox = "^4.27.0"
types-pytz = "^2025.2.0.20250516"

[tool.black]
line-length = 79

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"
add-ignore = "D107,D104,D106"
